--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
 <div id="app">
-
+    <note-card
+            v-for="card in column.cards"
+            :key="card.id"
+    :card="card"
+    :column-index="columnIndex"
+    @update-item="updateItem"
+    ></note-card>
 
 </div>
 </body>
